infra/k8s-apps/argo-workflows/overlays/testing/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: argo-workflows
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/protocol: https
spec:
  rules:
  - http:
      paths:
        - backend:
            serviceName: argo-server
            servicePort: 2746
          path: /
    host: argo-workflows.172.20.0.1.nip.io
